refactor to converter seperate handlers - no new behavier code
- Extract Discover handlers (DBSCHEMA_*, MDSCHEMA_*, DISCOVER_*)
- Extract Execute handlers (Statement, Alter, Cancel, ClearCache)
- Simplify XmlaApiAdapter with handler dispatch maps
- Add type-safe getXxxList() methods to Convert/Handler
- Constantd for String and QName decentralized
- add tests
- Formatter and organite imports

Signed-off-by: Stefan Bischof <stbischof@bipolis.org>